# meridian

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.openhands/: setup.sh
.openhands/microagents/: repo.md
apps/backend/: biome.json  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/backend/src/: app.ts  index.ts
apps/backend/src/durable_objects/: dataSourceIngestorDO.ts  sourceScraperDO.ts
apps/backend/src/lib/: articleFetchers.ts  embeddings.ts  logger.ts  parsers.ts  rateLimiter.ts  tryCatchAsync.ts  utils.ts
apps/backend/src/prompts/: articleRepresentation.prompt.ts
apps/backend/src/routers/: durableObjects.router.ts  events.router.ts  openGraph.router.ts  reports.router.ts  sources.router.ts
apps/backend/src/workflows/: processArticles.workflow.ts  processIngestedItem.workflow.ts
apps/backend/test/: parseArticle.spec.ts  parseRss.spec.ts  rateLimiter.spec.ts  tsconfig.json  utils.spec.ts
apps/briefs/src/: events.py
apps/frontend/: eslint.config.mjs  nuxt.config.ts  package.json  tailwind.config.ts
apps/frontend/src/components/: BriefTableOfContents.vue  SubscriptionForm.vue
apps/frontend/src/composables/: useReadingProgess.ts  useTableOfContents.ts
apps/frontend/src/layouts/: admin.vue  default.vue
apps/frontend/src/pages/admin/: index.vue  login.vue
apps/frontend/src/pages/admin/feed/: [id].vue
apps/frontend/src/pages/briefs/: [slug].vue
apps/frontend/src/plugins/: markdown.ts
apps/frontend/src/server/api/: subscribe.post.ts
apps/frontend/src/server/api/admin/sources/: index.get.ts  index.post.ts
apps/frontend/src/server/api/admin/sources/[id]/: details.get.ts  index.delete.ts  init-dos.post.ts
apps/frontend/src/server/api/briefs/: index.get.ts
apps/frontend/src/server/api/briefs/[slug]/: index.get.ts
services/meridian-ml-service/: fly.toml  pyproject.toml  run_tests.py
services/meridian-ml-service/src/meridian_ml_service/: clustering.py  dependencies.py  main.py  schemas.py
services/meridian-ml-service/tests/: conftest.py  test_cluster_endpoint.py  test_clustering_extra.py  test_clustering_unit.py  test_utils.py
